<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="首页"/>

    <item
        android:id="@+id/course_classify"
        android:icon="@drawable/classify"
        android:title="课程分类" />

    <item
        android:id="@+id/item_3"
        android:icon="@drawable/mystudy"
        android:title="我的学习" />

</menu>