<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nv_course"
        android:icon="@drawable/ic_course_black_24dp"
        android:title="我的课程" />

    <item
        android:id="@+id/nv_msg"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="我的信息" />
    <item
        android:id="@+id/nv_build"
        android:icon="@drawable/ic_build_black_24dp"
        android:title="设置" />

    <item
        android:id="@+id/nv_logout"
        android:icon="@drawable/ic_logout_new_black_24dp"
        android:title="注销" />

</menu>